<resources>
    <string name="app_name">MCC-Calendar</string>
    <string name="action_synch">Synchronize</string>
    <string name="action_list_view">List View</string>
    <string name="action_calendar_view">Calendar View</string>
    <string name="action_settings">Settings</string>
    <string name="action_import">Import Wizard</string>
    <string name="action_about">About</string>

    <string name="rest_synch_uri">http://mcc-calendar.ddns.net:8080/api/events/synchronize/all</string>
    <string name="rest_events_uri">http://mcc-calendar.ddns.net:8080/api/events/</string>

    <string-array name="freq_list">
        <item>Pick Time Period</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="about_prompt">Calendar for the Mobile Cloud Computing course at Aalto University (Espoo, Finland).\n\nCreated by Alberto Vaccari in the end of 2015.</string>
    <string name="title_activity_import">Import Wizard</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>

</resources>
