<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_list_view"
        android:title="@string/action_list_view"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_synchronize"
        android:title="@string/action_synch"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_import"
        android:orderInCategory="200"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
